# opds_api

./: Cargo.toml  README.md
data/: fb2-768381-769440.db  fb2-768381-769440.inp
src/: author.rs  book.rs  collation.rs  lib.rs  queries.rs  serie.rs  value.rs
src/api/: author.rs  book.rs  mod.rs  serie.rs
