[package]
name = "opds_api"
version = "1.0.15"
edition = "2021"

[lib]
name = "opds_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled", "collation", "vtab", "array", "functions"]}
log = "0.4"
env_logger = "0.11"
lazy_static = { version = "1.5.0" }